[metadata]
name = gan_metrics
version = 0.0.1
author = vslvskyy
author_email = vslvskyy@gmail.com
description = A library for generative models metrics
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
package_dir=
    =.
packages = find:
install_requires =
    scipy
    numpy
    torchvision
    pytorch

[options.packages.find]
where = .
